persistence layer refactor completed