@@ -1,127 +1,169 @@
 package org.collexio;
 
-import org.collexio.business.domain.*;
-import org.collexio.persistence.*;
+import org.collexio.persistence.dao.DBItemDAO;
+import org.collexio.persistence.dao.DBItemPhotoDAO;
+import org.collexio.persistence.dao.DBTransactionDAO;
+import org.collexio.persistence.model.*;
 import org.junit.jupiter.api.*;
 
-import java.io.IOException;
-import java.nio.file.Paths;
-import java.sql.*;
+import java.nio.file.Path;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.SQLException;
+import java.sql.Statement;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class DBItemDAOTest {
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class DBItemDAOTest {
+
     private Connection connection;
     private DBItemDAO itemDAO;
+    private DBItemPhotoDAO photoDAO;
+    private DBTransactionDAO transactionDAO;
 
-    @BeforeEach
-    public void setupDatabase() throws SQLException, IOException {
-        connection = ConnectionFactory.getConnection();
-        itemDAO = new DBItemDAO(connection, new DBItemPhotoDAO(connection), new DBTransactionDAO(connection));
-        DBItemCollectionDAO collectionDao = new DBItemCollectionDAO(connection, itemDAO);
+    @BeforeAll
+    void setupDatabase() throws SQLException {
+        connection = DriverManager.getConnection("jdbc:sqlite::memory:");
         try (Statement stmt = connection.createStatement()) {
-            stmt.execute("DELETE FROM item_collections");
-            stmt.execute("DELETE FROM item_transactions");
-            stmt.execute("DELETE FROM item_photos");
-            stmt.execute("DELETE FROM items");
-            stmt.execute("DELETE FROM sqlite_sequence WHERE name IN ('item_collections','item_photos','items','item_transactions')");
+            stmt.execute("PRAGMA foreign_keys = ON");
+
+            // Item collections
+            stmt.execute("""
+                CREATE TABLE item_collections (
+                    id INTEGER PRIMARY KEY AUTOINCREMENT,
+                    name TEXT NOT NULL
+                );
+            """);
+
+            stmt.execute("""
+                INSERT INTO item_collections (name)
+                VALUES ('Collection 1'), ('Collection 2');
+            """);
+
+            // Items
+            stmt.execute("""
+                CREATE TABLE items (
+                    id INTEGER PRIMARY KEY AUTOINCREMENT,
+                    name TEXT NOT NULL,
+                    quantity INTEGER NOT NULL,
+                    description TEXT,
+                    type INTEGER NOT NULL,
+                    item_collection_id INTEGER,
+                    FOREIGN KEY(item_collection_id) REFERENCES item_collections(id) ON DELETE SET NULL
+                );
+            """);
+
+            // Item photos
+            stmt.execute("""
+                CREATE TABLE item_photos (
+                    id INTEGER PRIMARY KEY AUTOINCREMENT,
+                    path TEXT NOT NULL,
+                    photo_date TEXT NOT NULL,
+                    item_id INTEGER,
+                    FOREIGN KEY(item_id) REFERENCES items(id) ON DELETE CASCADE
+                );
+            """);
+
+            // Item transactions
+            stmt.execute("""
+                CREATE TABLE item_transactions (
+                    id INTEGER PRIMARY KEY AUTOINCREMENT,
+                    amount REAL NOT NULL,
+                    income INTEGER NOT NULL,
+                    transaction_date TEXT NOT NULL,
+                    item_id INTEGER,
+                    FOREIGN KEY(item_id) REFERENCES items(id) ON DELETE CASCADE
+                );
+            """);
         }
-        ItemCollection collection = new ItemCollection("books");
-        collectionDao.add(collection);
+
+        photoDAO = new DBItemPhotoDAO(connection);
+        transactionDAO = new DBTransactionDAO(connection);
+        itemDAO = new DBItemDAO(connection, photoDAO, transactionDAO);
     }
 
-    @AfterEach
-    public void teardownDatabase() throws SQLException {
+    @BeforeEach
+    void clearData() throws SQLException {
         try (Statement stmt = connection.createStatement()) {
-            stmt.execute("DELETE FROM item_collections");
-            stmt.execute("DELETE FROM item_transactions");
-            stmt.execute("DELETE FROM item_photos");
-            stmt.execute("DELETE FROM items");
-            stmt.execute("DELETE FROM sqlite_sequence WHERE name IN ('item_collections','item_photos','items','item_transactions')");
+            stmt.execute("DELETE FROM items;");
+            stmt.execute("DELETE FROM item_transactions;");
+            stmt.execute("DELETE FROM item_photos;");
         }
+    }
+
+    @AfterAll
+    void closeConnection() throws SQLException {
         connection.close();
     }
 
-
     @Test
-    public void testGetAdd() throws SQLException {
-        ItemPhoto p1 = new ItemPhoto(Paths.get("plant.jpg"), LocalDate.now());
-        ItemPhoto p2 = new ItemPhoto(Paths.get("book.jpg"), LocalDate.now());
-        ItemPhoto p3 = new ItemPhoto(Paths.get("tech.jpg"), LocalDate.now());
+    void testAddItem() throws SQLException {
+        ItemPhotoEntity photo = new ItemPhotoEntity(Path.of("data/pippo.png"), LocalDate.now());
+        ItemEntity item = new ItemEntity(null, ItemType.TECHITEM, "Nintendo ds", 1, photo, "nintendo ds blu metallico");
+        item.addTransaction(new TransactionEntity(200, false, LocalDate.now()));
+        item.addTransaction(new TransactionEntity(400, true, LocalDate.now()));
 
-        Plant plant = new Plant("Rose", 5, p1, "flower plant", "rosa_canina");
-        Book book = new Book("Clean Code", 3, p2, "cs book");
-        TechItem tech = new TechItem("Laptop", 2, p3, "laptop for studying");
+        itemDAO.add(item, 1L);
+        ItemEntity fetched = itemDAO.getAll().get(0);
+        assertEquals(1L, fetched.getId());
+        assertEquals(fetched.getName(), item.getName());
+        assertEquals(fetched.getTransactions().size(), item.getTransactions().size());
 
-        for (Item item : List.of(plant, book, tech)) {
-            for (int i = 0; i < 4; i++) {
-                item.addTransaction(new Transaction(50.0 + i * 10, i % 2 == 0, LocalDate.now()));
-            }
-            itemDAO.add(item, 1L);
-        }
-
-        List<Item> allItems = itemDAO.getAll();
-        assertEquals(3, allItems.size());
-        assertEquals(plant, allItems.get(0));
-        assertEquals(book, allItems.get(1));
-        assertEquals(tech, allItems.get(2));
-
-        Optional<Item> retrieved = itemDAO.get(1L);
-        assertEquals(retrieved.get(), plant);
     }
 
-
     @Test
-    public void testUpdateItems() throws SQLException {
-        ItemPhoto p1 = new ItemPhoto(Paths.get("plant.jpg"), LocalDate.now());
-        Item plant = new Plant("Tulip", 5, p1, "flower plant", "tulipa_gesneriana" );
-        itemDAO.add(plant, 1L);
-        Long plantId = itemDAO.getAll().get(0).getId();
+    void testGetByCollectionId() throws SQLException {
+        ItemPhotoEntity photo = new ItemPhotoEntity(null, Path.of("/tmp/photo2.jpg"), LocalDate.now());
+        ItemEntity item1 = new ItemEntity(null, ItemType.TECHITEM, "Nintendo 3DS", 7, photo, "Coll desc");
+        item1.addTransaction(new TransactionEntity(110.0, true, LocalDate.now()));
+        item1.addTransaction(new TransactionEntity(120.0, false, LocalDate.now()));
 
-        ItemPhoto p2 = new ItemPhoto(Paths.get("book.jpg"), LocalDate.now());
-        Item book = new Book("Clean Code", 3, p2, "cs book");
-        itemDAO.add(book, 1L);
-        Long bookId = itemDAO.getAll().get(1).getId();
+        itemDAO.add(item1, 1L);
 
-        ItemPhoto p3 = new ItemPhoto(Paths.get("tech.jpg"), LocalDate.now());
-        Item tech = new TechItem("Laptop", 2, p3, "laptop fr studying");
-        itemDAO.add(tech, 1L);
-        Long techId = itemDAO.getAll().get(2).getId();
+        ItemEntity item2 = new ItemEntity(null, ItemType.BOOK, "PSP Vita", 4, photo, "Coll2 desc");
+        item2.addTransaction(new TransactionEntity(115.0, true, LocalDate.now()));
+        itemDAO.add(item2, 1L);
 
+        List<ItemEntity> items = itemDAO.getByCollectionId(1L);
 
-        plant = new Plant(plantId, "Tulip Updated", 10, p1, "plant with red flowers", "tulipa_gesnerianaUPDATE");
-        book = new Book(bookId, "Clean Code v2", 5, p2, "computer science book");
-        tech = new TechItem(techId, "Laptop Pro", 3, p3, "laptop");
-
-        itemDAO.update(plant, false);
-        itemDAO.update(book, false);
-        itemDAO.update(tech, false);
-
-        assertEquals(plant, itemDAO.get(plantId).get());
-        assertEquals(book, itemDAO.get(bookId).get());
-        assertEquals(tech, itemDAO.get(techId).get());
+        assertEquals(2, items.size());
+        System.out.println(items.get(0));
+        System.out.println(items.get(1));
     }
 
+    @Test
+    void testUpdateItem() throws SQLException {
+        ItemPhotoEntity photo = new ItemPhotoEntity(null, Path.of("/tmp/photo3.jpg"), LocalDate.now());
+        ItemEntity item = new ItemEntity(null, ItemType.PLANT, "Updatable Item", 1, photo, "Old desc");
+        item.addTransaction(new TransactionEntity(15.0, true, LocalDate.now()));
+        itemDAO.add(item, 1L);
+
+        ItemEntity saved = itemDAO.getAll().get(0);
+
+        itemDAO.update(new ItemEntity(saved.getId(), saved.getType(), "Updated Name", 99, saved.getPhoto(), "New desc"), false);
+
+        Optional<ItemEntity> fetched = itemDAO.get(saved.getId());
+        assertTrue(fetched.isPresent());
+        assertEquals("Updated Name", fetched.get().getName());
+        assertEquals(99, fetched.get().getQuantity());
+        assertEquals("New desc", fetched.get().getDescription());
+    }
 
     @Test
-    public void testDeleteItems() throws SQLException {
-        ItemPhoto p1 = new ItemPhoto(Paths.get("plant.jpg"), LocalDate.now());
-        Plant plant = new Plant("Cactus", 2, p1, "succulent plant", "opuntia_ficus");
-        itemDAO.add(plant, 1L);
-        Long plantId = itemDAO.getAll().get(0).getId();
+    void testDeleteItem() throws SQLException {
+        ItemPhotoEntity photo = new ItemPhotoEntity(null, Path.of("/tmp/photo4.jpg"), LocalDate.now());
+        ItemEntity item = new ItemEntity(null, ItemType.TECHITEM, "Delete Me", 2, photo, "Desc");
+        item.addTransaction(new TransactionEntity(30.0, false, LocalDate.now()));
+        itemDAO.add(item, 1L);
 
-        ItemPhoto p2 = new ItemPhoto(Paths.get("book.jpg"), LocalDate.now());
-        Book book = new Book("Effective Java", 1, p2, "java book for pro");
-        itemDAO.add(book, 1L);
-        Long bookId = itemDAO.getAll().get(1).getId();
+        ItemEntity saved = itemDAO.getAll().get(0);
+        itemDAO.delete(saved.getId());
 
-        itemDAO.delete(plantId);
-        itemDAO.delete(bookId);
-
-        assertFalse(itemDAO.get(plantId).isPresent());
-        assertFalse(itemDAO.get(bookId).isPresent());
+        Optional<ItemEntity> fetched = itemDAO.get(saved.getId());
+        assertFalse(fetched.isPresent());
     }
 }
